# algoLabs

./: README.md
0/: lab0.c  list.h
1/: CMakeLists.txt  input.c  input.h  lab1.c  matrix.c  matrix.h
2a/: CMakeLists.txt  lab2.c  list.h  stack.c  stack.h  vector.c  vector.h
2b/: CMakeLists.txt  lab2.c  list.c
3a/: CMakeLists.txt  input.c  input.h  lab3.c  list.c  list.h  table.c  table.h
3b/: CMakeLists.txt  lab3.c  list.c  list.h  table.c  table.h
4a/: CMakeLists.txt  bintree.c  bintree.h  climsg.h  gen_data.py  lab4a.c  timing.txt
4b/: CMakeLists.txt  climsg.h  gen_data.py  kdtree.c  kdtree.h  lab4b.c  list.c  list.h  viz.py
5/: CMakeLists.txt  climsg.h  graph.c  lab5.c  list.c  list.h  metro.json  metro_graph.txt  metro_process.py  table.c  table.h  timing.txt  viz.py
5/metro/: CMakeLists.txt  graph.h  metro.c
6/: CMakeLists.txt  knapsack.cpp  knapsack.h  lab6.cpp
